Änderung data_b, .gitignore, tabelle 1
-data_b ergänzt
- *.aux & *.bcf zu .gitignore hinzugefügt
- tabelle 1 erstellt

--- a/v354/v354.tex
+++ b/v354/v354.tex
@@ -3,9 +3,9 @@
 \subject{VERSUCH NUMMER}
 \title{TITEL}
 \date{%
-  Durchführung: DATUM
+  Durchführung: 16.11.2021
   \hspace{3em}
-  Abgabe: DATUM
+  Abgabe: 23.11.2021
 }
 
 \begin{document}
