Literaturquellen, kleine Anpassungen

--- a/lit.bib
+++ b/lit.bib
@@ -3,3 +3,25 @@
   title = {Versuch zum Literaturverzeichnis},
   year = 2014
 }
+
+@online{v353,
+	title        = {Das Relaxationsverhalten eines RC-Kreises},
+	organization = {TU Dortmund},
+	urldate      = {2021-11-18},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1712442/mod_resource/content/1/V353.pdf},
+}
+
+@online{v354,
+	title        = {Gedämpfte und erzwungene Schwingungen},
+	organization = {TU Dortmund},
+	urldate      = {2021-11-18},
+	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1712443/mod_resource/content/1/V354.pdf},
+}
+
+@book{finke92,
+	author       = {Siegfried Finke},
+	title        = {Versuchsanleitungen zum Anfänger-Praktikum in Physik},
+	publisher    = {Fachbereich Physik Universität Dortmund},
+	date         = {1992},
+  edition      = {2}
+}
