--- a/v354/v354.tex
+++ b/v354/v354.tex
@@ -1,7 +1,7 @@
 \input{header.tex}
 
-\subject{VERSUCH NUMMER}
-\title{TITEL}
+\subject{V354}
+\title{Gedämpfte und erzwungene Schwingung}
 \date{%
   Durchführung: 16.11.2021
   \hspace{3em}
