--- a/lit.bib
+++ b/lit.bib
@@ -5,14 +5,14 @@
 }
 
 @online{v353,
-	title        = {Das Relaxationsverhalten eines RC-Kreises},
+	title        = {V353 - Das Relaxationsverhalten eines RC-Kreises},
 	organization = {TU Dortmund},
 	urldate      = {2021-11-18},
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1712442/mod_resource/content/1/V353.pdf},
 }
 
 @online{v354,
-	title        = {Gedämpfte und erzwungene Schwingungen},
+	title        = {V354 - Gedämpfte und erzwungene Schwingungen},
 	organization = {TU Dortmund},
 	urldate      = {2021-11-18},
 	url          = {https://moodle.tu-dortmund.de/pluginfile.php/1712443/mod_resource/content/1/V354.pdf},
