--- a/v354/content/theorie.tex
+++ b/v354/content/theorie.tex
@@ -10,8 +10,8 @@ wobei über den Ohmschen Widerstand R Enrgie in Form von Wärme aus dem System g
 
 \begin{figure}
 	\centering
-    \includegraphics[width=0.33\textwidth]{content/RLC-Kreis.pdf}
-	\caption{Schaltskizze des gedämpften Schwingkreises \cite{v354}}
+    \includegraphics[width=0.4\textwidth]{content/RLC.pdf}
+	\caption{Schaltskizze des gedämpften Schwingkreises \cite{v354}.}
 	\label{fig:RLC}
 \end{figure}
 
@@ -19,15 +19,16 @@ Mit Hilfe der zweiten Kirchhoffschen Regel lässt sich die Gleichung:
 
 \begin{equation}
     \label{eqn:RLC1}
-    U_R(t) + U_C(t)+ U_L(t) = 0
+    U_R(t) + U_C(t) + U_L(t) = 0
 \end{equation}
 
 Mit den Bedingungen:
 
-\begin{align*}
-    U_R(t) &= R*I(t) & U_L(t) &= L \frac{\symup{d}I}{\symup{d}t} \\
-    U_C(t) &= \frac{Q(t)}{C} & I(t) &= \frac{\symup{d}Q}{\symup{d}t}
-\end{align*}
+\begin{align}
+    \label{eqn:RLC_relations}
+        U_R(t) &= R*I(t) & U_L(t) &= L \frac{\symup{d}I}{\symup{d}t} \nonumber \\
+        U_C(t) &= \frac{Q(t)}{C} & I(t) &= \frac{\symup{d}Q}{\symup{d}t} 
+\end{align}
 
 folgt nach einmaligen differenzieren nach der Zeit und durch Division von L:
 
@@ -37,10 +38,10 @@ folgt nach einmaligen differenzieren nach der Zeit und durch Division von L:
 \end{equation}
 
 Diese lineare, homogene Differentialgleichung zweiter Ordnung wird durch den Exponentialansatz 
-$I(t) = A e^{i\omega t} \text{ mit } A, \omega \in \mathbb{C}$ gelöst. Die Lösung lautet dann wie folgt:
+$I(t) = A e^{i\tilde{\omega} t} \text{ mit } A, \tilde{\omega} \in \mathbb{C}$ gelöst. Die Lösung lautet dann wie folgt:
 
 \begin{align*}
-    \omega &= i \frac{R}{2L} \pm \sqrt{\frac{1}{LC}- \frac{R^2}{4L^2}} & ,\omega &= i2 \pi \mu \pm 2\pi \nu
+    \tilde{\omega} &= i \frac{R}{2L} \pm \sqrt{\frac{1}{LC}- \frac{R^2}{4L^2}} & ,\tilde{\omega} &= i2 \pi \mu \pm 2\pi \nu
 \end{align*}
 \begin{equation}
     \label{eqn:RLC_lsg}
@@ -76,7 +77,7 @@ Wenn $\nu$ imaginär ist, also $\frac{1}{LC} < \frac{R^2}{LC}$ gilt, wird der Ex
 und es liegt keine Schwingung mehr vor. $I(t)$ ist dann proportional zu reellen e-Funktionen:
 
 \begin{equation}
-    I(t) \propto e^{(-2\pi\mu-i2\pi\nu)*t}
+    I(t) \propto e^{(-2\pi\mu-i2\pi\nu)t}
 \end{equation}
 
 Der Sonderfall $\nu = 0$ wird aperiodischer Grenzfall genannt. Er tritt ein, wenn der Widerstand $R_\text{ap}$
@@ -86,3 +87,77 @@ erreicht wird. Der Wert dieses Widerstands lautet dann:
     \label{eqn:R_ap}
     R_\text{ap} =2L \sqrt{\frac{1}{LC}}
 \end{equation}
+
+
+
+
+\subsection{Erzwungene Schwingung}
+\label{sec:Theorie_2}
+
+Im zweiten Teil des Versuchs wird ein angeregter RLC-Schwingkreis behandelt. Dieser unterscheidet sich zu dem zuvor
+beschriebenen Schwingkreis darin, dass eine Wechselspannung $U(t)$ eingeschaltet wird. Dadurch wird kontinuirlich Energie in das 
+System eingeführt. Dies bewirkt eine oszillierende Spannung $U_C$ am Kondensator, die in Phase zu der Erregerspannung ist.
+
+\begin{figure}
+	\centering
+    \includegraphics[width=0.4\textwidth]{content/RLC_angeregt.pdf}
+	\caption{Schaltskizze des angeregten Schwingkreises \cite{v354}.}
+	\label{fig:RLC_angeregt}
+\end{figure}
+
+Gleichung \eqref{eqn:RLC1} ergänzt sich dann mit $U(t) = U_0e^{i\omega t}$ und den Beziehungen \eqref{eqn:RLC_relations} zu
+
+\begin{gather}  
+    R I(t) + U_C(t) + L \frac{\symup{d}I(t)}{\symup{d}t} = U_0e^{i\omega t} \nonumber \\
+    \Leftrightarrow R \frac{\symup{d}Q(t)}{\symup{d}t} + U_C(t)    + L \frac{\symup{d^2}Q(t)}{\symup{d}t^2} = U_0e^{i\omega t} \nonumber \\
+    \Leftrightarrow LC \frac{\symup{d^2}U_C(t)}{\symup{d}t^2} + RC \frac{\symup{d}U_C(t)}{\symup{d}t} + U_C(t) = U_0e^{i\omega t}
+    \label{eqn:RLC_angeregt}
+\end{gather}
+
+Gleichung \eqref{eqn:RLC_angeregt} kann wieder über den Exponentialansatz $U(t) = U_0(w)e^{i\omega t}$ gelöst werden,
+wobei die Amplitude frequenzabhängig ist. Das Einsetzen dieses Ansatzes in \eqref{eqn:RLC_angeregt} führt zu der Gleichung:
+\begin{equation*}
+    -LC\omega^2 U(\omega) + i\omega RC U(\omega) + U(\omega) = U_0
+\end{equation*}
+woraus 
+\begin{equation}
+    \label{eqn:RLC_Amplitude}
+    U(\omega) = \frac{U_0 (1-LC\omega^2-i\omega RC)}{(1-LC\omega^2)^2+\omega^2 R^2 C^2}
+\end{equation}
+für die frequenzabhängige Amplitude folgt. Aus \eqref{eqn:RLC_Amplitude} lässt sich wiederum mit den Rechenregeln für
+komplexe Zahlen der Betrag von U und die Phase ($\phi$) berechnen. Es gilt für den Betrag:
+
+\begin{equation}
+    \label{eqn:RLC_Betrag}
+    |U(\omega)| = |U_C(\omega)| = \frac{U_0}{\sqrt{(1-LC\omega^2)^2+\omega^2R^2C^2}}
+\end{equation}
+und für die Phase gegenüber der Erregerspannung:
+
+\begin{equation}
+    \label{eqn:RLC_Phase}
+    \phi(\omega) = \symup{arctan}\left(\frac{-\omega RC}{1-LC\omega^2}\right)
+\end{equation}
+
+Aus \eqref{eqn:RLC_Betrag} lässt sich erkennen, dass $U_C$ für den Grenzwert $\omega \to 0$ gegen die Erregerspannung $U_0$
+strebt, was insofern sinnvoll ist, da dann ein Gleichstrom anliegt. Für $\omega \to \infty$ geht $U_C$ gegen 0.
+Des Weiteren findet sich ein Maximum für $U_C$, welches an der Stelle $\omega_{\text{res}}$ liegt.
+$\omega_{\text{res}}$ heißt Resonanzfrequenz und hat den Wert:
+\begin{equation}
+    \label{eqn:Resonanzfrequenz}
+    \omega_{\text{res}} = \sqrt{\frac{1}{LC}-\frac{R^2}{2L^2}}
+\end{equation}
+Ein interessanter Zusammenhang findet sich im Fall der schwachen Dämpfung: $\frac{R^2}{2L^2} \ll \frac{1}{LC}$. Dann geht $\omega_{\text{res}}$ 
+in die Eigenfrequenz $\omega_0$ eines des Systems über und die Kondensatorspannung erreicht den Wert: 
+\begin{equation}
+    \label{eqn:Guete_Resonanzkurve}
+    U_{C, \text{max}} = \frac{1}{\omega_0 RC} U_0 := q U_0
+\end{equation}
+Der Faktor $q$ wird als Güte der Resonanzkurve bezeichnet. Bei $R \to 0$ geht $q \to \infty$ und somit auch $U_{C, \text{max}} \to \infty$.
+Ein weiteres Kennzeichen der Resonanzkurve ist ihre Breite. Diese wird über die Frequenzen $\omega_+$ und $\omega_-$ beschrieben, bei denen
+die Kondensatorspannung jeweils den Wert $\sfrac{1}{\sqrt{2}}\; U_{C,\text{max}}$ annimmt. Die gesuchten Frequenzen lassen sich mit Formel
+\eqref{eqn:RLC_Betrag} bestimmen. Unter der Annahme, dass eine schwache Dämpfung vorliegt gilt für die Breite der Resonanzkurve:
+\begin{gather}
+    \Delta\omega := \omega_+ - \omega_- \approx \frac{R}{L} \label{eqn:DeltaOmega} \\
+    \text{Für die Güte gilt die Gleichung:} \nonumber \\
+    q = \frac{\omega_0}{\Delta\omega}                       \label{eqn:Guete_Resonanzkurve2}
+\end{gather}
