Durchführung layout update

--- a/v354/content/durchfuehrung.tex
+++ b/v354/content/durchfuehrung.tex
@@ -1,3 +1,4 @@
+\floatplacement{figure}{hbtp}
 \section{Durchführung}
 \label{sec:Durchfuehrung}
 \subsection{Erste Problemstellung}
@@ -7,9 +8,9 @@ angelegt werden. Diese wird durch einen Frequenzgenerator, an dem die Art der Sc
 eingespeist. Das Oszilloskop zeigt den Schwingungsverlauf der eingespeisten Spannung gegen die Zeitachse an. Am Oszilloskop kann die Amplitude und die Zeit abgelesen werden. Es soll 
 gemessen werden bis die Amplitude um den Faktor 3-8 abgenommen hat. 
 \begin{figure}
-    \includegraphics[width=\textwidth]{content/SchaltungZuA.pdf}
+    \includegraphics[width=0.7\textwidth]{content/SchaltungZuA.pdf}
     \centering
-    \caption{Schaltung zur Bestimmung der Zeitabhängigkeit der Amplitude und des Dämpfungswiderstandes eines gedämpften RLC-SChwingkreises.}
+    \caption{Schaltung zur Bestimmung der Zeitabhängigkeit der Amplitude und des Dämpfungswiderstandes eines gedämpften RLC-SChwingkreises \cite{v354}.}
     \label{fig:SchaltungZuA}
 \end{figure}
 \subsection{Zweite Problemstellung}
@@ -20,8 +21,8 @@ Nun soll der Wiederstand solange runtergeregelt werden bis sich ein "Überschwin
 verschwindet. Der Widerstand zum aperiodischen Grenzfall ist nun am regelbare Widerstand abzulesen.
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{content/SchaltungZuB.pdf}
-    \caption{Schaltung zur Bestimmung des Widerstandes zum aperiodischen Grenzfalls.}    
+    \includegraphics[width=0.7\textwidth]{content/SchaltungZuB.pdf}
+    \caption{Schaltung zur Bestimmung des Widerstandes zum aperiodischen Grenzfalls \cite{v354}.}    
     \label{fig:SchaltungZuB}
 \end{figure}
 \subsection{Dritte Problemstellung}
@@ -33,8 +34,8 @@ niedrigen Frequenz, welche man am Sinusgenerator einstellen kann, und regelt die
 $U$ gemessen. 
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{content/SchaltungZuC.pdf}
-    \caption{Schaltung zur Bestimmung der Frequenzabhängigkeit der Kondensatorspannung.}    
+    \includegraphics[width=0.7\textwidth]{content/SchaltungZuC.pdf}
+    \caption{Schaltung zur Bestimmung der Frequenzabhängigkeit der Kondensatorspannung \cite{v354}.}    
     \label{fig:SchaltungZuC}
 \end{figure}
 \subsection{Vierte Problemstellung}
@@ -49,13 +50,13 @@ Oszilloskop ab. Man beginnt mit einer angepasst niedrigen Frequenz und regelt di
 bestimmt werden.
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{content/SchaltungZuD.pdf}
-    \caption{Schaltung zur Bestimmung der Frequenzabhängigkeit der Phase.}    
+    \includegraphics[width=0.7\textwidth]{content/SchaltungZuD.pdf}
+    \caption{Schaltung zur Bestimmung der Frequenzabhängigkeit der Phase \cite{v354}.}    
     \label{fig:SchaltungZuD}
 \end{figure}
 \begin{figure}
     \centering
-    \includegraphics[width=\textwidth]{content/Phasenbestimmung.pdf}
-    \caption{Hilfsskizze zur Bestimmung der Phase zweier Schwingungen.}    
+    \includegraphics[width=0.7\textwidth]{content/Phasenbestimmung.pdf}
+    \caption{Hilfsskizze zur Bestimmung der Phase zweier Schwingungen \cite{v353}.}    
     \label{fig:Phasenbestimmung}
 \end{figure}
