--- a/v354/content/theorie.tex
+++ b/v354/content/theorie.tex
@@ -17,7 +17,7 @@ wobei über den Ohmschen Widerstand R Enrgie in Form von Wärme aus dem System g
 
 Mit Hilfe der zweiten Kirchhoffschen Regel lässt sich die Gleichung:
 
-\begin{equation}
+\begin{equation}-
     \label{eqn:RLC1}
     U_R(t) + U_C(t) + U_L(t) = 0
 \end{equation}
@@ -85,9 +85,9 @@ erreicht wird. Der Wert dieses Widerstands lautet dann:
 
 \begin{equation}
     \label{eqn:R_ap}
-    R_\text{ap} =2L \sqrt{\frac{1}{LC}}
+    R_\text{ap} =2L \sqrt{\frac{1}{LC}} = 2L \omega_0
 \end{equation}
-
+$\omega_0$ ist die Kreisfrequenz des ungedämpften Schwingkreises.
 
 
 
