--- a/v354/content/theorie.tex
+++ b/v354/content/theorie.tex
@@ -48,9 +48,10 @@ $I(t) = A e^{i\tilde{\omega} t} \text{ mit } A, \tilde{\omega} \in \mathbb{C}$ g
     I(t) = e^{-2 \pi \mu t} (A_1e^{i2 \pi \nu t} + A_2e^{-i2 \pi \nu t})
 \end{equation}
 $A_1$ und $A_2$ sind wieder komplexe Zahlen und es gilt die Konvention 
-\begin{equation*}
+\begin{equation}
+    \label{eqn:def_mu_nu}
     2\pi \mu := \frac{R}{2L} \qquad , 2\pi \nu := \sqrt{\frac{1}{LC}- \frac{R^2}{4L^2}}
-\end{equation*}
+\end{equation}
 Man unterscheidet zwei allgemeine Arten von Lösungen:\\
 \\
 \textbf{1. Fall:} Schwingfall (gedämpfte Schwingung)
