--- a/v354/content/auswertung.tex
+++ b/v354/content/auswertung.tex
@@ -39,7 +39,7 @@ $R_{\text{eff}}$ ergibt sich durch einsetzen zu:
 \end{equation*}
 
 Auffällig ist, dass $R_{\text{eff}}$ genau $R_1 + 50\unit{\ohm}$ entspricht. Dies hat den Grund, dass der Innenwiderstand des Generators
-$50 \unit{ohm}$ beträgt. Aus diesem Grund wird dieser in den Folgenden Auswertungen berücksichtigt.
+$50 \unit{\ohm}$ beträgt. Aus diesem Grund wird dieser in den Folgenden Auswertungen berücksichtigt.
 Die Abklingdauer lässt sich nach Gleichung \eqref{eqn:T_ex} berechnen.
 
 \subsection{Aperiodischer Grenzfall}
