--- a/v354/content/durchfuehrung.tex
+++ b/v354/content/durchfuehrung.tex
@@ -45,6 +45,7 @@ Auf dem Oszilloskop werden die Spannungsverläufe von der Kondensatorspannung $U
 in \autoref{fig:Phasenbestimmung} gegeben, bestimmt werden. Daher ließt man den Abstand der Nulldurchgänge $a$ und die Periodendauer $b$ der Kondensatorspannung $U_{C}$ auf dem 
 Oszilloskop ab. Man beginnt mit einer angepasst niedrigen Frequenz und regelt diese dann in konstanten Abständen hoch. Die Phase $\phi$ soll dann gemäß der Formel 
 \begin{equation}
+    \label{eqn:Phase}
     \phi = \frac{a}{b}2\pi 
 \end{equation}
 bestimmt werden.
