--- a/v354/content/theorie.tex
+++ b/v354/content/theorie.tex
@@ -162,3 +162,16 @@ die Kondensatorspannung jeweils den Wert $\sfrac{1}{\sqrt{2}}\; U_{C,\text{max}}
     \text{Für die Güte gilt die Gleichung:} \nonumber \\
     q = \frac{\omega_0}{\Delta\omega}                       \label{eqn:Guete_Resonanzkurve2}
 \end{gather}
+
+Für die Phasenverschiebung werden aus Gleichung \eqref{eqn:RLC_Phase} die beiden Frequenzen $\omega_1$ und $\omega_2$ identifiziert, bei denen
+die Phasenverschiebung den Wert $\sfrac{\pi}{4}$ und $\sfrac{3\pi}{4}$ annimmt. Für ihren Wert gilt:
+
+\begin{equation}
+    \label{eqn:w_1_w_2}
+    \omega_1,2 = \pm \frac{R}{2L} + \sqrt{\frac{R^2}{4L^2}+\frac{1}{LC}}
+\end{equation}
+ebenfalls gilt der Zusammenhang:
+\begin{equation}
+    \label{eqn:w_1_w_2_2}
+    \omega_1 - \omega_2 = \frac{R}{L}
+\end{equation}
